--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>#idcon Identity Conference</title>
+	<title>#idcon - Identity Conference</title>
     <meta name="author" content="idcon.org">
     
 	<meta name="description" content=" Blog Archives ">
