--- a/public/search.html
+++ b/public/search.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>#idcon Identity Conference</title>
+	<title>#idcon - Identity Conference</title>
     <meta name="author" content="idcon.org">
     
 	<meta name="description" content="Search Results $('#search_results').tapir({ 'token': '', 'complete' : function() { document.getElementById('search_loading').style.display="none &hellip;">
