--- a/public/jobs/index.html
+++ b/public/jobs/index.html
@@ -19,7 +19,7 @@
     <link href='http://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Amethysta' rel='stylesheet' type='text/css'>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
     <script type="text/javascript" src="/javascripts/jquery-tapir.js"></script>
@@ -27,7 +27,7 @@
     <!-- remove or comment it to disable ajaxification -->
     <script src="/javascripts/ajaxify.js"></script>
 
-    
+    <meta name="google-site-verification" content="Hm0HCd8DKk8zcz9V3wWrF5PTzZbNulv-Au8FoMo6tPg" />
     
 
 </head>
