--- a/public/jobs/index.html
+++ b/public/jobs/index.html
@@ -48,13 +48,19 @@
   
   <!-- Facebook -->
   <li>
-  <a href="http://www.facebook.com/idcon.org" class="facebook" title="Facebook"></a>
+  <a href="https://www.facebook.com/idcon.org" class="facebook" title="Facebook"></a>
   </li>
   
   
   <!-- Twitter -->
   <li>
-  <a href="http://www.twitter.com/search?q=%23idcon" class="twitter" title="Twitter"></a>
+  <a href="https://www.twitter.com/search?q=%23idcon" class="twitter" title="Twitter"></a>
+  </li>
+  
+  
+  <!-- Twitter -->
+  <li>
+  <a href="https://www.youtube.com/channel/UCO4UxfD_-1hUh6b_Wo2J9HQ" class="youtube" title="YouTube Channel"></a>
   </li>
   
   
@@ -119,7 +125,7 @@
         </div>
         <footer id="footer">
           <div style="display:inline">
-    Copyright &copy; 2016
+    Copyright &copy; 2017
 
     idcon.org
 . Powered by <a href="http://octopress.org">Octopress</a> | 
