--- a/source/index.html
+++ b/source/index.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <article class="post about">{% include about.html %}</article>
-<article class="post jobs">{% include jobs.html %}</article>
+{% if false %}<article class="post jobs">{% include jobs.html %}</article>{% endif %}
 <article class="post events">{% include events.html %}</article>
